Add command execute admin check

--- a/Journeyman.App/appsettings.json
+++ b/Journeyman.App/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  //"Url": "https://a123-94-243-175-204.ngrok.io/{0}",
-  "Url": "https://www.Jorneyman.somee.com/{0}",
+  "Url": "https://a123-94-243-175-204.ngrok.io/{0}",
+  //"Url": "https://www.Jorneyman.somee.com/{0}",
   "Token": "1728956369:AAFDn4tD1ZFiCO1INKqO9dGqeVmhV1Ldj9g",
   "ConnectionStrings": {
     "DefaultConnection": "workstation id=Journeyman.mssql.somee.com;packet size=4096;user id=anton93_SQLLogin_1;pwd=p3pobmijnh;data source=Journeyman.mssql.somee.com;persist security info=False;initial catalog=Journeyman"
